# HistoPolAligner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: samples_paper.xlsx
notebooks/: AlignHistologyPolarimetry.ipynb  AlignHistologyPolarimetrySingleMeasurement.ipynb  CreateAzimuthStd.ipynb  GetSamplesInfo.ipynb  MaskForBorderTF.ipynb  QuantifiyParametersHealthyVsTumor-Copy1.ipynb  QuantifiyParametersHealthyVsTumor.ipynb  TBD-QuantifiyParametersHealthyVsTumor.ipynb  VerifyAlignmentProcedure.ipynb  registration.m
src/histopolalign/: AlignImage.py  __init__.py  align_folders.py  align_imgs.py  combine_images.py  compare_healthy_tumor.py  finalize_mask.py  get_numerical_results.py  helpers.py  imgJ_align.py  match_skeletons.py  orientation_img.py  orientation_param.py  prepare_images.py  semi_automatic_tool.py  trash.py
src/histopolalign/AlignImages/: AlignImage.py  align_folders.py  align_imgs.py  combine_images.py  finalize_mask.py  get_numerical_results.py  helpers.py  imgJ_align.py  match_skeletons.py  prepare_images.py  semi_automatic_tool.py
src/histopolalign/AlignImages/data/: colors.json  colors_GM_WM.json  combined_img_RGB_GM_WM_link.json  combined_img_RGB_link.json  labels.txt  labels_idx.json  param_matching_pts.json  position_names.txt
src/histopolalign/AzimuthStdViz/: AzimuthStdViz.py
src/histopolalign/CompareHealthyTumor/: compare_healthy_tumor.py
src/histopolalign/GetSamplesInfo/: GetSamplesInfo.py
src/histopolalign/MLS/: Untitled.ipynb
src/histopolalign/SkeletonMatching/: SkeletonMatching.ipynb  matched_points.pickle  skeleton2Graph.py  skeletonContext.py
src/histopolalign/VerificationAlignment/: mask_generation.py  verify_alignment.py  verify_alignment_procedure.py
src/histopolalign/data/: folders_verification.txt
tests/: test_histopolalign.py
