# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "HistoPolAlign"
description = "package description."
readme = "README.md"
requires-python = ">=3.8, <3.11"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "romain.gros@unibe.ch", name = "Romain Gros" },
]
dynamic = ["version"]
dependencies = ["scikit-image", "numpy", "tqdm", "Pillow", "matplotlib", "rembg", "opencv-python"]

[tool.hatch.version]
path = "src/histopolalign/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/RomGr/HistoPolAlign"
repository = "https://github.com/RomGr/HistoPolAlign"
